--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -2,20 +2,21 @@
 #wall .tag-1 {
     display: none;
 }
-#wall #tag-2 {
+div#wall #tag-2 {
     display: none;
 }
-#wall #tag-3.slick {
+body div#wall #tag-3.slick {
     display: none;
 }
-.parent #tag-4 {
+div#wall #tag-4 {
     display: none;
 }
-.parent #tag-5.slick{
+body div#wall .parent #tag-5.slick{
     display: none;
 }
-.parent #tag-6 {
+body div#wall div.parent div:last-child div#tag-6  {
     display: none;
-}.parent #tag-7.slick{
+}
+html body div#wall div.parent div > #tag-7.slick{
     display: none;
 }
